--- a/workshop4.html
+++ b/workshop4.html
@@ -108,6 +108,23 @@ img {
      }, 250);
     }    
 
+    function disappear() {
+      var img = document.getElementById("carimage");
+      img.parentNode.removeChild(img);
+    }
+
+    function insertRows() {
+      var taulukko = document.getElementById("data");
+      var row = taulukko.insertRow(6);
+     
+      var cell1 = row.insertCell(0);
+      var cell2 = row.insertCell(1);
+      var cell3 = row.insertCell(2);
+     
+      cell1.innerHTML = textfield.value;
+      cell2.innerHTML = textfield2.value;
+      cell3.innerHTML = textfield3.value;
+      }
 </script>
 </head>
 
@@ -175,9 +192,9 @@ img {
     <p class="surprise">You can do neat things by editing CSS-rules via  JavaScript. See the examples in lecture slides. Then try these:</p>
     <ol>
       <li><button id="buttonPosition" onclick="changePosition()">Move!</button>Select the div with an id &quot;carimage&quot; and move it 200px left and 500px down</li>
-      <li><button onclick="setInterval(function(){doMove();},1000); "/>Animate</button> Write a  funtion doMove() which  will move the image across the screen, or even better: back and forth on  the screen. The Interval required has already been added to the onclick -event of the list item.</li>
-      <li><button onclick="setInterval(function(){fadeOut();},250);"/>Fade out!</button> Wite  a function fadeOut() which will slowly decrease the opacity of the image from 1.0 to  0 making it fade out. The Interval required has already been added to the onclick -event of the list item</li>
-      <li><button onclick="hide()"/>Disappear! </button>Finally, write JavaScript which will remove the image from the page</li>
+      <li><button onclick="setInterval(function(){doMove();},1000);">Animate</button> Write a  funtion doMove() which  will move the image across the screen, or even better: back and forth on  the screen. The Interval required has already been added to the onclick -event of the list item.</li>
+      <li><button onclick="setInterval(function(){fadeOut();},250);">Fade out!</button> Wite  a function fadeOut() which will slowly decrease the opacity of the image from 1.0 to  0 making it fade out. The Interval required has already been added to the onclick -event of the list item</li>
+      <li><button onclick="disappear()">Disappear! </button>Finally, write JavaScript which will remove the image from the page</li>
     </ol>
   </li>
 </ul>
